Added 3 Recipe Pages
Pages can be entered from the home page. Each page contains images of the food, steps to cook the food, and ingredients.

--- a/recipes/meth.html
+++ b/recipes/meth.html
@@ -7,5 +7,28 @@
 </head>
 <body>
     <h1>Meth</h1>
+    <img src="../../odin-links-and-images/images/meth.jpeg" alt="meth">
+    <br>
+    <h3>Description</h3>
+    <p>Methamphetamine[note 1] (contracted from N-methylamphetamine) is a potent central nervous system (CNS) stimulant that is mainly used as a recreational drug and less commonly as a second-line treatment for attention deficit hyperactivity disorder and obesity.[22] Methamphetamine was discovered in 1893 and exists as two enantiomers: levo-methamphetamine and dextro-methamphetamine.[note 2] Methamphetamine properly refers to a specific chemical substance, the racemic free base, which is an equal mixture of levomethamphetamine and dextromethamphetamine in their pure amine forms, but the hydrochloride salt, commonly called crystal meth, is widely used. Methamphetamine is rarely prescribed over concerns involving human neurotoxicity and potential for recreational use as an aphrodisiac and euphoriant, among other concerns, as well as the availability of safer substitute drugs with comparable treatment efficacy such as Adderall and Vyvanse. Dextromethamphetamine is a stronger CNS stimulant than levomethamphetamine.</p>
+    <br>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>pseudoephedrine</li>
+        <li>ephedrine</li>
+        <li>paint thinner</li>
+        <li>Freon</li>
+        <li>acetone</li>
+        <li>anhydrous ammonia</li>
+        <li>iodine crystals</li>
+        <li>red phosphorus</li>
+        <li>battery acid</li>
+    </ul>
+    <br>
+    <h3>Categories of Meth Labs</h3>
+    <ol>
+        <li>Superlabs produce large quantities of meth and supply organized drug trafficking groups that sell the drug in communities across the U.S. Most of the larger labs are controlled by Mexican Drug Trafficking Organizations operating in the U.S. and Mexico.</li>
+        <li>Small Toxic Labs produce smaller quantities of meth.  These labs can be set up in homes, motel rooms, inside automobiles, and in parks or rural areas -- really almost anywhere.</li>
+    </ol>
 </body>
 </html>
