--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,28 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../../odin-links-and-images/images/lasagna.jpeg" alt="Lasagna">
+    <br>
+    <h3>Description:</h3>
+    <p>
+        Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked layers of lasagna alternating with fillings such as ragù, béchamel sauce, vegetables, cheeses, and seasonings and spices.</p>
+    <br>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>3 cups ricotta cheese</li>
+        <li>3/4 cup grated parmesan cheese</li>
+        <li>2 eggs</li>
+        <li>1 pound ground beef</li>
+        <li>1 jar (45 ounces) Prego Sauce Marinara</li>
+        <li>12 cooked lasagna noodles, drained</li>
+        <li>12 ounces shredded mozzarella cheese (about 3 cups)</li>
+    </ul>    
+    <br>
+    <h3>Steps</h3>
+    <ol>
+        <li>Stir the ricotta cheese, 1/2 cup Parmesan cheese and eggs in a medium bowl and set it aside.  Season the beef as desired.  In a 3-quart saucepan over medium-high heat, cook the beef until it's well browned, stirring often to break up the meat. Pour off any fat. Stir the sauce in the saucepan.</li>
+        <li>Spoon 2 cups beef mixture into a 13x9x2-inch baking dish. Top with 4 lasagna noodles, half the ricotta cheese mixture and half the mozzarella. Repeat the layers. Top with the remaining 4 lasagna noodles, remaining beef mixture and the remaining Parmesan cheese.</li>
+        <li>Bake at 400°F. for 30 minutes or until the lasagna is hot. Let stand for 10 minutes before cutting.</li>
+    </ol>
 </body>
 </html>
