--- a/recipes/pulledpork.html
+++ b/recipes/pulledpork.html
@@ -7,5 +7,34 @@
 </head>
 <body>
     <h1>Pulled Pork</h1>
+    <img src="../../odin-links-and-images/images/pulledpork.jpeg">
+    <br>
+    <h3>Description</h3>
+    <p>Pulled pork is an American barbecue dish, more specifically a dish of the Southern U.S., based on shredded barbecued pork shoulder. It is typically slow-smoked over wood; indoor variations use a slow cooker. The meat is then shredded manually and mixed with a sauce.</p>
+    <br>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>4 lb pork shoulder or butt</li>
+        <li>2 tablespoons oil</li>
+        <li>1 tbsp brown sugar</li>
+        <li>chili powder</li>
+        <li>onion powder</li>
+        <li>garlic powder</li>
+        <li>cumin</li>
+        <li>kosher salt</li>
+        <li>black pepper</li>
+        <li>bbq sauce</li>
+    </ul>
+    <br>
+    <h3>Steps</h3>
+    <ol>
+        <li>Trim pork of excess fat and cut into 4 pieces.
+        </li>
+        <li>Combine spices in a small bowl and rub all over the pork. (This can be done the night before).</li>
+        <li>Sear (optional): Heat a few tablespoons of oil in a Dutch oven pot over medium-high heat. Add the meat and sear for a few seconds on all sides.</li>
+        <li>Oven Method: Preheat oven to 300 degrees F. Pour coke around the pork in the Dutch oven pot. Cover pot with lid and cook for 3 hours. Remove lid and cook for an additional 1-2 hours, until pork is tender and easily pulls apart with a fork. Remove from oven and shred meat. Toss in barbecue sauce, if desired.</li>
+        <li>Slow Cooker Method: Place pork in slow cooker and pour coke around it. Cover and cook on LOW (recommended) 8 hours or high for 4-5 hours, until pork is tender and shreds easily with a fork.</li>
+        <li>Instant Pot Method: Place pork in instant pot and pour coke around it. Cook on Manual/High pressure for 70 minutes. When timer beeps, allow the pot to naturally release pressure, about 15 minutes longer. Remove lid and shred the meat.</li>
+    </ol>
 </body>
 </html>
