--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../../odin-links-and-images/images/lasagna.jpeg" alt="Lasagna">
+    <img src="../pics/lasagna.jpeg" alt="Lasagna">
     <br>
     <h3>Description:</h3>
     <p>
