--- a/recipes/meth.html
+++ b/recipes/meth.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Meth</h1>
-    <img src="../../odin-links-and-images/images/meth.jpeg" alt="meth">
+    <img src="../pics/meth.jpeg" alt="meth">
     <br>
     <h3>Description</h3>
     <p>Methamphetamine[note 1] (contracted from N-methylamphetamine) is a potent central nervous system (CNS) stimulant that is mainly used as a recreational drug and less commonly as a second-line treatment for attention deficit hyperactivity disorder and obesity.[22] Methamphetamine was discovered in 1893 and exists as two enantiomers: levo-methamphetamine and dextro-methamphetamine.[note 2] Methamphetamine properly refers to a specific chemical substance, the racemic free base, which is an equal mixture of levomethamphetamine and dextromethamphetamine in their pure amine forms, but the hydrochloride salt, commonly called crystal meth, is widely used. Methamphetamine is rarely prescribed over concerns involving human neurotoxicity and potential for recreational use as an aphrodisiac and euphoriant, among other concerns, as well as the availability of safer substitute drugs with comparable treatment efficacy such as Adderall and Vyvanse. Dextromethamphetamine is a stronger CNS stimulant than levomethamphetamine.</p>
