--- a/recipes/pulledpork.html
+++ b/recipes/pulledpork.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pulled Pork</h1>
-    <img src="../../odin-links-and-images/images/pulledpork.jpeg">
+    <img src="../pics/pulledpork.jpeg">
     <br>
     <h3>Description</h3>
     <p>Pulled pork is an American barbecue dish, more specifically a dish of the Southern U.S., based on shredded barbecued pork shoulder. It is typically slow-smoked over wood; indoor variations use a slow cooker. The meat is then shredded manually and mixed with a sauce.</p>
