--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
-    <h1>Odin Recipes</h1>
+<body id="index-body">
+    <h1 id="index-title">Jack's Cookbook</h1>
+    <img src="pics/food.jpeg" alt="A bunch of different foods" id="food-pic">
     <ul>
         <li>
             <a href="recipes/lasagna.html">Lasagna</a>
